[package]
name = "footile"
version = "0.5.0"
authors = ["Douglas Lau <doug.p.lau@gmail.com>"]
description = "A 2D vector graphics library"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/footile"
homepage = "https://github.com/DougLau/footile"
repository = "https://github.com/DougLau/footile"
readme = "README.md"
edition = "2018"

[dependencies]
pix = "0.13"

[dev-dependencies]
criterion = "0.3"
png_pong = "0.5"

[[bench]]
name = "fishyb"
harness = false

[features]
default = ["simd"]
simd = []
